--- a/_posts/2014-12-31-goodbye-2014.md
+++ b/_posts/2014-12-31-goodbye-2014.md
@@ -14,7 +14,7 @@ Year 2014, I:
 - Learned 2 new programming languages: Go, Clojure.
 - Used 2 B5 size notebooks.
 - Worked 698 hours (since Sep.), tracked with RescuetTime.
-  I spent 333 hours in using Vim, 34 hours in resolving issues on [GitHub][3].
+  I spent 333 hours on using Vim, 34 hours on resolving issues on [GitHub][3].
 - Have 19,761 emails in my Gmail.
 - Spent 50 hours in train, 2 hours in plane (CAN ✈ PEK).
 
